re PR c++/27451 (ICE with invalid asm statement)

PR c++/27451
	* stmt.c (expand_asm_operands): Skip asm statement with erroneous
	clobbers.

	* g++.dg/ext/asm9.C: New test.

From-SVN: r114189