gcc/testsuite/g++.dg/ext/asm9.C
@@ -1,0 +1,7 @@
+// PR 27451
+// { dg-do compile }
+
+void foo()
+{
+  asm("" ::: X); // { dg-error "before" }
+}
